hphp/test/zend/good/ext/openssl/tests/bug54060.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!extension_loaded("openssl")) die("skip");
}
