hphp/test/zend/bad/ext/openssl/tests/bug66501.php.skipif
<?php 
if (!extension_loaded("openssl")) die("skip");
if (!defined(OPENSSL_KEYTYPE_EC)) die("skip no EC available);